force-app/main/default/objects/Embryo_Storage_Import__c/Embryo_Storage_Import__c.object-meta.xml
<CustomObject>
    <label>Embryo Storage Import</label>
    <nameField>
        <label>Embryo Storage Import</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Embryo Storage Import</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>