force-app/main/default/objects/Embryo_Storage_Import__c/fields/Age_of_Embryo__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Embryo__c</fullName>
    <label>Age of Embryo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>