force-app/main/default/objects/Embryo_Storage_Import__c/fields/Date_of_Freeze__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Freeze__c</fullName>
    <label>Date of Freeze</label>
    <type>Date</type>
</CustomField>