force-app/main/default/objects/Embryo_Storage_Import__c/fields/Embryo_ID__c.field-meta.xml
<CustomField>
    <fullName>Embryo_ID__c</fullName>
    <label>Embryo ID #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>