force-app/main/default/objects/Embryo_Storage_Import__c/fields/Freeze_Type__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Type__c</fullName>
    <label>Freeze Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>