force-app/main/default/objects/Embryo_Storage_Import__c/fields/OPU_date__c.field-meta.xml
<CustomField>
    <fullName>OPU_date__c</fullName>
    <label>OPU date</label>
    <type>Date</type>
</CustomField>