force-app/main/default/objects/Embryo_Storage_Import__c/fields/Storage_site_1__c.field-meta.xml
<CustomField>
    <fullName>Storage_site_1__c</fullName>
    <label>Storage site 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>